completed the mcq question system on student side

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -408,8 +408,8 @@
 
                             </a>
                         </li>
-
-                        <li class="sidebar-item" id="leveller-btn">
+<!-- id="leveller-btn" -->
+                        <li class="sidebar-item" >
                             <a class="sidebar-link {% block summer_active %} {% endblock %}"
                                 href="{% url 'student_flames' %}" aria-expanded="false">
                                 <span>
