--- a/templates/student/batch/my_sheet.html
+++ b/templates/student/batch/my_sheet.html
@@ -125,11 +125,11 @@ active
                                 </h6>
                             </th>
 
-                            <th class="border-bottom-0" style="text-align: center;">
+                            <!-- <th class="border-bottom-0" style="text-align: center;">
                                 <h6 class="fw-semibold mb-0">
                                     Status🚦
                                 </h6>
-                            </th>
+                            </th> -->
                             <th class="border-bottom-0 justify-content-center">
                                 <h6 class="fw-semibold mb-0">
                                     Link 🔗
@@ -164,7 +164,7 @@ active
                                 </h6>
                             </td>
 
-                            <td class="border-bottom-0" style="text-align: center;">
+                            <!-- <td class="border-bottom-0" style="text-align: center;">
                                 {% if user_submissions|get_item:question.id %}
                                 {% with submission=user_submissions|get_item:question.id %}
                                 <span class="badge bg-{{ submission.status|get_status_color }} text-color">{{ submission.status }}</span>
@@ -174,7 +174,7 @@ active
                                 {% else %}
                                 <p>Not Attempted</p>
                                 {% endif %}
-                            </td>
+                            </td> -->
                             <td class="border-bottom-0">
                                 <div class="d-flex align-items-center gap-2">
 
