added total enrollment status on admin page

--- a/templates/administration/batch/batch.html
+++ b/templates/administration/batch/batch.html
@@ -166,7 +166,11 @@ active
             <h3 class="heading">
                 <span class="fw-semibold">{{ batch.name }} 🔥</span>
                 <span class="fs-4"> | Angaar x W3Grads
+                    <h4 class="float-end">
+                        Total Enrollments: <span class="badge bg-dark fs-5">{{ batch.get_total_enrollments }}</span> 
+                    </h3>
                 </span>
+                
             </h3>
         </div>
 
@@ -183,7 +187,6 @@ active
     </div>
 
 
-    <!--============================================ BATCH POD =================================== -->
 
 
 
