fixed the reorder page on admin side

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -131,6 +131,10 @@
             background-color: #555;
             /* Darker background on hover */
         }
+
+        .body-wrapper>.container-fluid{
+            max-width: 100%;
+        }
     </style>
 
     <script>
