--- a/templates/administration/sheet/reorder.html
+++ b/templates/administration/sheet/reorder.html
@@ -28,7 +28,8 @@ Reorder {{ sheet.name }}
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item pe-auto"><a href="{% url 'administrator_sheets' %}">Sheets</a></li>
-            <li class="breadcrumb-item pe-auto"><a href="{% url 'administrator_sheet' sheet.slug %}">{{ sheet.name }}</a></li>
+            <li class="breadcrumb-item pe-auto"><a href="{% url 'administrator_sheet' sheet.slug %}">
+                {{ sheet.name }}</a></li>
 
             </li>
             <li class="breadcrumb-item active" aria-current="page">Reorder</li>
@@ -49,14 +50,31 @@ Reorder {{ sheet.name }}
         <div class="card-body p-4">
 
             <ul id="question-list" class="list-group">
+                {% if sheet.sheet_type == 'MCQ' %}
+
                 {% for question in questions %}
+
+                <li class="list-group-item d-flex justify-content-between align-items-center"
+                    data-id="{{ question.id }}">
+                    <span class="float-start">{{ forloop.counter }}</span>
+                    <span class="">{{ question.question_text|truncatechars:50 }}</span>
+                    <span class="drag-handle" style="cursor: grab;">&#9776;</span> <!-- Drag icon -->
+                </li>
+
+                {% endfor %}
+
+                {% else %}
+                {% for question in questions %}
+
                 <li class="list-group-item d-flex justify-content-between align-items-center"
                     data-id="{{ question.id }}">
                     <span class="float-start">{{ forloop.counter }}</span>
                     <span class="">{{ question.title }}</span>
                     <span class="drag-handle" style="cursor: grab;">&#9776;</span> <!-- Drag icon -->
                 </li>
+
                 {% endfor %}
+                {% endif %}
             </ul>
             <button class="btn btn-primary mt-3" onclick="saveOrder()">Save Order</button>
 
